# mantle-eco-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_delivery_events.py  0003_metric_sync_states.py  0004_stablecoin_scope_fix.py
config/: milestones.py  scheduler.toml  settings.py  thresholds.py  watchlist_seed.py
docker/: entrypoint.sh
docs/: alert-local-testing.md  docker-vps-deployment.md  project-status.md  runbook.md  vps-deployment-and-lark-e2e-guide.md
docs/plans/: 2026-03-13-mantle-monitor-phase1-implementation.md  2026-03-14-dune-stablecoin-transfer-volume-implementation.md  2026-03-14-project-management-docs-implementation.md  2026-03-14-public-source-first-design.md  2026-03-14-public-source-first-implementation.md  2026-03-15-bot-internal-routing-design.md  2026-03-15-bot-internal-routing-implementation.md  2026-03-15-bot-readonly-whitelist-design.md  2026-03-15-bot-readonly-whitelist-implementation.md  2026-03-15-dev-live-check-script-design.md  2026-03-15-dev-live-check-script-implementation.md  2026-03-15-docker-vps-deployment-design.md  2026-03-15-docker-vps-deployment-implementation.md  2026-03-15-dune-historical-sync-design.md  2026-03-15-dune-historical-sync-implementation.md  (+24 more)
scripts/: dev_live_check.sh  test_source_frequencies.py
specs/: DESIGN.md  alert-rules-spec.md  data-sources-spec.md  database-schema-spec.md  prd-simple.md
src/: main.py
src/admin/: __main__.py  (+6 more)
tests/: conftest.py  test_main.py
(+99 files in other folders)
